--- a/dotfiles/.config/waybar/style.css
+++ b/dotfiles/.config/waybar/style.css
@@ -35,4 +35,24 @@ window#waybar {
   border-width: 0px;
 }
 
+#memory {
+  background-color: rgba(104, 194, 217, 1.0);
+  padding: 4px 6px; 
+  margin-top: 6px; 
+  margin-left: 6px; 
+  margin-right: 6px; 
+  border-radius: 10px;
+  border-width: 0px;
+}
+
+#cpu {
+  background-color: rgba(104, 194, 217, 1.0);
+  padding: 4px 6px; 
+  margin-top: 6px; 
+  margin-left: 6px; 
+  margin-right: 6px; 
+  border-radius: 10px;
+  border-width: 0px;
+}
+
 
